--- a/gallery.html
+++ b/gallery.html
@@ -50,6 +50,11 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
+<ul class="nav nav-pills nav-stacked">
+  <li role="presentation" class="active"><a href="#">Dogs</a></li>
+  <li role="presentation"><a href="#">Cats</a></li>
+  <li role="presentation"><a href="#">Other</a></li>
+</ul>
 
 </body>
 <style>
