--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,30 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/site.css" rel="stylesheet">
 
+	<style>
+		div.img {
+			margin: 5px;
+			border: 1px solid #ccc;
+			float: left;
+			width: 180px;
+		}	
+
+		div.img:hover {
+			border: 1px solid #777;
+		}
+
+		div.img img {
+			width: 100%;
+			height: auto;
+		}
+
+		div.desc {
+			padding: 15px;
+			text-align: center;
+		}
+	</style>
+	
+	
 </head>
 <body>
 	<nav class="navbar navbar-default">
@@ -40,7 +64,55 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 
+	<div class="container">
+	<div class="row">
+		<div class="col-md-3">
+		<ul class="nav nav-pills nav-stacked">
+		  <li role="presentation" class="active"><a href="#">Dogs</a></li>
+		  <li role="presentation"><a href="#">Cats</a></li>
+		  <li role="presentation"><a href="#">Other</a></li>
+		</ul>
+		</div>
 
+
+	<div class="col-md-9">
+		<div class="img">
+		  <a target="_blank" href="img_fjords.jpg">
+			<img src="pictures/puppy.jpg" alt="Trolltunga Norway" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="img">
+		  <a target="_blank" href="img_forest.jpg">
+			<img src="pictures/cat1.jpg" alt="Forest" width="600" height="400">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="img">
+		  <a target="_blank" href="img_lights.jpg">
+			<img src="pictures/puppy1.jpg" alt="Northern Lights" width="600" height="400">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="img">
+		  <a target="_blank" href="img_mountains.jpg">
+			<img src="pictures/dog1.jpg" alt="Mountains" width="600" height="400">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+	</div>
+	</div>
+	
+	
+	
+	
+	
+	
+	
+	
 	
 	
 	
@@ -50,65 +122,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-<ul class="nav nav-pills nav-stacked">
-  <li role="presentation" class="active"><a href="#">Dogs</a></li>
-  <li role="presentation"><a href="#">Cats</a></li>
-  <li role="presentation"><a href="#">Other</a></li>
-</ul>
 
-</body>
-<style>
-div.img {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-}	
-
-div.img:hover {
-    border: 1px solid #777;
-}
-
-div.img img {
-    width: 100%;
-    height: auto;
-}
-
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-</style>
-</head>
-<body>
-
-<div class="img">
-  <a target="_blank" href="img_fjords.jpg">
-    <img src="pictures/puppy.jpg" alt="Trolltunga Norway" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="img">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="pictures/cat1.jpg" alt="Forest" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="img">
-  <a target="_blank" href="img_lights.jpg">
-    <img src="pictures/puppy1.jpg" alt="Northern Lights" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="img">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="pictures/dog1.jpg" alt="Mountains" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
 
 </body>
 </html>
