--- a/gallery.html
+++ b/gallery.html
@@ -77,8 +77,8 @@
 
 	<div class="col-md-9">
 		<div class="img">
-		  <a target="_blank" href="img_fjords.jpg">
-			<img src="pictures/puppy.jpg" alt="Trolltunga Norway" width="300" height="200">
+		  <a target="_blank" href="pictures/puppy.jpg">
+			<img src="pictures/puppy.jpg" alt="Golden Retriever" width="300" height="200">
 		  </a>
 		  <div class="desc">Add a description of the image here</div>
 		</div>
