--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!doctype HTML>
-<HTML>
+<html>
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,19 +55,18 @@
 
 Morbi vitae vestibulum elit, non rutrum quam. Maecenas in condimentum dolor. Cras sodales vulputate enim, eget pharetra massa consequat sed. Proin a massa odio. In quam sapien, aliquet ornare felis in, posuere posuere mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean vulputate tincidunt sapien sit amet convallis. Vestibulum vitae congue ex. Praesent condimentum mi in varius facilisis. Nam auctor, nibh ac convallis molestie, eros sapien ornare velit, facilisis commodo eros justo et mauris. Fusce in purus sit amet urna iaculis vehicula in non nisl. Nulla eget maximus tortor. Sed ut justo eget nulla egestas sodales non eu velit. Sed imperdiet euismod tellus at venenatis. Pellentesque quam nisi, iaculis quis ex quis, posuere maximus enim.</p>
 </div>
-
+<br><br>
 <button class="drop">Laura Paganini</button>
 <div class="panel">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra posuere dolor sit amet maximus. Cras placerat libero sit amet semper porttitor. Cras ac purus vel urna vulputate vulputate. Duis vel sollicitudin augue. Mauris sodales quis turpis ac tempor. Proin mollis nisi nibh, vel suscipit justo elementum in. Aliquam pharetra risus convallis ultrices mattis. Aenean vestibulum, arcu in volutpat tincidunt, nunc tellus tempor magna, nec maximus neque felis quis est.
 
 Morbi vitae vestibulum elit, non rutrum quam. Maecenas in condimentum dolor. Cras sodales vulputate enim, eget pharetra massa consequat sed. Proin a massa odio. In quam sapien, aliquet ornare felis in, posuere posuere mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean vulputate tincidunt sapien sit amet convallis. Vestibulum vitae congue ex. Praesent condimentum mi in varius facilisis. Nam auctor, nibh ac convallis molestie, eros sapien ornare velit, facilisis commodo eros justo et mauris. Fusce in purus sit amet urna iaculis vehicula in non nisl. Nulla eget maximus tortor. Sed ut justo eget nulla egestas sodales non eu velit. Sed imperdiet euismod tellus at venenatis. Pellentesque quam nisi, iaculis quis ex quis, posuere maximus enim.</p>
 </div>
-
-<button class="drop">Anna Brunting</button>
+<br><br>
+<button class="drop">Anna Bunting</button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra posuere dolor sit amet maximus. Cras placerat libero sit amet semper porttitor. Cras ac purus vel urna vulputate vulputate. Duis vel sollicitudin augue. Mauris sodales quis turpis ac tempor. Proin mollis nisi nibh, vel suscipit justo elementum in. Aliquam pharetra risus convallis ultrices mattis. Aenean vestibulum, arcu in volutpat tincidunt, nunc tellus tempor magna, nec maximus neque felis quis est.
-
-Morbi vitae vestibulum elit, non rutrum quam. Maecenas in condimentum dolor. Cras sodales vulputate enim, eget pharetra massa consequat sed. Proin a massa odio. In quam sapien, aliquet ornare felis in, posuere posuere mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean vulputate tincidunt sapien sit amet convallis. Vestibulum vitae congue ex. Praesent condimentum mi in varius facilisis. Nam auctor, nibh ac convallis molestie, eros sapien ornare velit, facilisis commodo eros justo et mauris. Fusce in purus sit amet urna iaculis vehicula in non nisl. Nulla eget maximus tortor. Sed ut justo eget nulla egestas sodales non eu velit. Sed imperdiet euismod tellus at venenatis. Pellentesque quam nisi, iaculis quis ex quis, posuere maximus enim.</p>
+  <p><img src=""></p>
+  <p>Hello! I am a junior Interactive Media Studies Major, specializing in Interactive Business and minoring in Management. After gradution in December of 2016, I plan to work in the Event Planning industry doing a few of my favorite things: web design, social media, marketing, and graphic design. In my free time, you can find me pinning on Pinterest, playing with my dogs, or watching Whose Line Is It Anyway.</p>
  
 <script>
 
@@ -89,6 +88,7 @@ for (i = 0; i < acc.length; i++) {
 	
 	
 
-
 </body>
-<HTML>
+</div>
+</body>
+</html>
