--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 	<footer>
 		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
 		<p>Laura Paganini</p>
-		<p>Anna Brunting</p>
+		<p>Anna Bunting</p>
 		<p>Dillon Thomas</p>
 	</footer>
 	
