--- a/contact.html
+++ b/contact.html
@@ -86,12 +86,11 @@
 			  <select class="form-control" id="species">
 				  <option>Dog</option>
 				  <option>Cat</option>
-				  <option>Bird</option>
-				  <option>Lizard</option>
+				  <option>Other</option>
 			  </select>
 		  </fieldset>
 		  <fieldset class="form-group">
-			<label for="pet-name">Pet Name</label>
+			<label for="pet-name">Pet's Name</label>
 			<input type="text" class="form-control" id="pet-name" placeholder="Pet's Name" required>
 		  </fieldset>
 		  <button type="submit" class="btn btn-default">Submit</button>
