--- a/gallery.html
+++ b/gallery.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	
-	<title>Home</title>
+	<title>Gallery</title>
 	
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/site.css" rel="stylesheet">
+	
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 
 	<style>
 		div.img {
@@ -38,6 +43,9 @@
 	
 </head>
 <body>
+	
+
+
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -57,7 +65,7 @@
 		  	<li><a href="index.html">Home</a></li>
 			<li class="active"><a href="gallery.html">Gallery<span class="sr-only">(current)</span></a></li>
 			<li><a href="contact.html">Contact</a></li>
-			<li><a href="gallery.html">History</a></li>
+			<li><a href="history.html">History</a></li>
 			<li><a href="about.html">About</a></li>
 		  </ul>
 		</div><!-- /.navbar-collapse -->
@@ -75,36 +83,50 @@
 		</div>
 
 
-	<div class="col-md-9">
-		<div class="img">
-		  <a target="_blank" href="pictures/puppy.jpg">
-			<img src="pictures/puppy.jpg" alt="Golden Retriever" width="300" height="200">
-		  </a>
-		  <div class="desc">Add a description of the image here</div>
-		</div>
+		<div class="col-md-9">
+	
+	
+	
+	
+	
+	
+			<div class="img">
+			  <a target="_blank" href="pictures/puppy.jpg">
+				<img src="pictures/puppy.jpg" alt="Golden Retriever" width="300" height="200">
+			  </a>
+			  <div class="desc">Add a description of the image here</div>
+			</div>
 
-		<div class="img">
-		  <a target="_blank" href="img_forest.jpg">
-			<img src="pictures/cat1.jpg" alt="Forest" width="600" height="400">
-		  </a>
-		  <div class="desc">Add a description of the image here</div>
-		</div>
+			<div class="img">
+			  <a target="_blank" href="img_forest.jpg">
+				<img src="pictures/cat1.jpg" alt="Forest" width="600" height="400">
+			  </a>
+			  <div class="desc">Add a description of the image here</div>
+			</div>
 
-		<div class="img">
-		  <a target="_blank" href="img_lights.jpg">
-			<img src="pictures/puppy1.jpg" alt="Northern Lights" width="600" height="400">
-		  </a>
-		  <div class="desc">Add a description of the image here</div>
-		</div>
+			<div class="img">
+			  <a target="_blank" href="img_lights.jpg">
+				<img src="pictures/puppy1.jpg" alt="Northern Lights" width="600" height="400">
+			  </a>
+			  <div class="desc">Add a description of the image here</div>
+			</div>
 
-		<div class="img">
-		  <a target="_blank" href="img_mountains.jpg">
-			<img src="pictures/dog1.jpg" alt="Mountains" width="600" height="400">
-		  </a>
-		  <div class="desc">Add a description of the image here</div>
+			<div class="img">
+			  <a target="_blank" href="img_mountains.jpg">
+				<img src="pictures/dog1.jpg" alt="Mountains" width="600" height="400">
+			  </a>
+			  <div class="desc">Add a description of the image here</div>
+			</div>
 		</div>
 	</div>
+
 	</div>
+	<footer>
+		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
+		<p>Laura Paganini</p>
+		<p>Anna Brunting</p>
+		<p>Dillon Thomas</p>
+	</footer>
 	
 	
 	
@@ -115,12 +137,6 @@
 	
 	
 	
-	
-	
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
 
 
 
