--- a/history.html
+++ b/history.html
@@ -40,9 +40,19 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 
-
+	<div class="container">
 	
 	
+	
+	
+	</div>
+	
+	<footer>
+		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
+		<p>Laura Paganini</p>
+		<p>Anna Brunting</p>
+		<p>Dillon Thomas</p>
+	</footer>
 	
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
