--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseAnna" >Anna Brunting</button>
 				<div  class="collapse" id="collapseAnna">
 					<div class="well">
-					Hello! I am a junior Interactive Media Studies Major, specializing in Interactive Business and minoring in Management. After gradution in December of 2016, I plan to work in the Event Planning industry doing a few of my favorite things: web design, social media, marketing, and graphic design. In my free time, you can find me pinning on Pinterest, playing with my dogs, or watching Whose Line Is It Anyway.</p>
+					<p>Hello! I am a junior Interactive Media Studies Major, specializing in Interactive Business and minoring in Management. After gradution in December of 2016, I plan to work in the Event Planning industry doing a few of my favorite things: web design, social media, marketing, and graphic design. In my free time, you can find me pinning on Pinterest, playing with my dogs, or watching Whose Line Is It Anyway.</p>
 					</div>
 				</div>
 			</div>
@@ -84,13 +84,11 @@
 	<footer>
 		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
 		<p>Laura Paganini</p>
-		<p>Anna Brunting</p>
+		<p>Anna Bunting</p>
 		<p>Dillon Thomas</p>
 	</footer>
 	
 	
 
-</body>
-</div>
 </body>
 </html>
