--- a/gallery.html
+++ b/gallery.html
@@ -163,7 +163,7 @@
 	<footer>
 		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
 		<p>Laura Paganini</p>
-		<p>Anna Brunting</p>
+		<p>Anna Bunting</p>
 		<p>Dillon Thomas</p>
 	</footer>
 	
@@ -179,6 +179,5 @@
 
 
 
-</div>
 </body>
 </html>
