--- a/history.html
+++ b/history.html
@@ -1,5 +1,5 @@
 <!doctype HTML>
-<HTML>
+<html>
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,7 +50,7 @@
 	<footer>
 		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
 		<p>Laura Paganini</p>
-		<p>Anna Brunting</p>
+		<p>Anna Buunting</p>
 		<p>Dillon Thomas</p>
 	</footer>
 	
@@ -62,4 +62,4 @@
 
 
 </body>
-<HTML>
+</html>
