--- a/history.html
+++ b/history.html
@@ -50,7 +50,7 @@
 	<footer>
 		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
 		<p>Laura Paganini</p>
-		<p>Anna Buunting</p>
+		<p>Anna Bunting</p>
 		<p>Dillon Thomas</p>
 	</footer>
 	
