history page and general fixes

--- a/history.html
+++ b/history.html
@@ -41,8 +41,9 @@
 	</nav>
 
 	<div class="container">
-	
-	
+	<h1 class="page-header">Our History</h1>
+	<p>For 150 years, the American Society for the Prevention of Cruelty to Animals® (ASPCA) has worked tirelessly to put an end to animal abuse and neglect. We are a national leader in the areas of rescue, adoption and welfare, but none of it would be possible without ASPCA Guardians. Guardians' regular monthly gifts provide a consistent, reliable income stream that allows us to spend less time fundraising—and more time saving lives. Becoming an ASPCA Guardian is an easy, efficient and tax-deductible way to fight cruelty and make a difference for animals all year long.</p>
+	<p>This is not our actual history; this is the history of ASPCA.</p>
 	
 	
 	</div>
