--- a/about.html
+++ b/about.html
@@ -16,10 +16,7 @@
 </head>
 <body>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+
 
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
@@ -49,7 +46,7 @@
 
 
 	<div class="container">
-		<h1>Meet our team!</h1>
+		<h1 class="page-header">Meet our team!</h1>
 		<div class="row">
 			<div class="col-md-4">
 				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseDillon">Dillon Thomas</button>
@@ -88,6 +85,11 @@
 		<p>Dillon Thomas</p>
 	</footer>
 	
+	
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 	
 
 </body>
