--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	</nav>
 
 	<div class="container">
-		<h1>Site Name</h1>
+		<h1 class="page-header">Site Name</h1>
 		<h3>Adoption Agency Tagline</h3>
 	
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
