--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,10 @@
 		.container h1, h3{
 			text-align:center;
 		}
+		
+		.example{
+			background-color:red;
+		}
 	</style>
 	
 	
@@ -69,7 +73,7 @@
 		
 		<div id = "form-container">
 		<form>
-		  <fieldset class="form-group" id="name-field">
+		  <fieldset class="form-group">
 			<label for="name">Name</label>
 			<input type="text" class="form-control" id="name" placeholder="Your Name" required>
 		  </fieldset>
@@ -78,7 +82,7 @@
 			<input type="text" class="form-control" id="email" placeholder="Your Email" required>
 		  </fieldset>
 		  <fieldset class="form-group">
-			<label for="phone">Phone Number</label>
+			<label for="phone">Phone Number (XXX-XXX-XXXX)</label>
 			<input type="text" class="form-control" id="phone" placeholder="Your Phone" required>
 		  </fieldset>
 		  <fieldset class="form-group">
@@ -107,33 +111,25 @@
 	
 	
 	<script>
-	$("#name").on("focusout", function(){
-		var regex = /^[A-za-z]+$/;
+	$("input").on("focusout", function(){
+		var regex;
+		switch($(this)[0].id){
+			case "name":
+			case "pet-name": regex = /^[A-za-z]+$/;   break;
+			case "phone": regex = /^(\d+-?)+\d+$/;	break;
+			case "email": regex = /.+@.+\..+/;	break;
+		}
+
 		if(!regex.test($(this).val()))
-		//	$("#name").parent.addClass("has-error");
-			//alert("boop");
-		//else
-			//$("#name").css("display", "none");
+			$(this).parent().addClass("has-error");	
+		else
+			$(this).parent().removeClass("has-error");
 	});
-	$("#name-field").addClass("has-error");
+	
+	$("form").submit(function() {
+		alert("Thank you for your submission!");
+	});
 	</script>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
 
 
 </body>
