--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseAnna" >Anna Brunting</button>
+				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseAnna" >Anna Bunting</button>
 				<div  class="collapse" id="collapseAnna">
 					<div class="well">
 					<p>Hello! I am a junior Interactive Media Studies Major, specializing in Interactive Business and minoring in Management. After gradution in December of 2016, I plan to work in the Event Planning industry doing a few of my favorite things: web design, social media, marketing, and graphic design. In my free time, you can find me pinning on Pinterest, playing with my dogs, or watching Whose Line Is It Anyway.</p>
