Updated my about me

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseDillon">Dillon Thomas</button>
 				<div  class="collapse" id="collapseDillon">
 					<div class="well">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra posuere dolor sit amet maximus. Cras placerat libero sit amet semper porttitor. Cras ac purus vel urna vulputate vulputate. Duis vel sollicitudin augue. Mauris sodales quis turpis ac tempor. Proin mollis nisi nibh, vel suscipit justo elementum in. Aliquam pharetra risus convallis ultrices mattis. Aenean vestibulum, arcu in volutpat tincidunt, nunc tellus tempor magna, nec maximus neque felis quis est.				
+					Dillon Thomas is a current sophomore here at Miami University and is studying Interactive Media Studies with a double minor in Entrepreneurship and Graphic Design. His hobbies consist of wakeboarding and boating in the summer while skiing in the winter. I am usually scrolling through a skiing website called Newschoolers and watching those videos waiting for winter to come back around.			
 					</div>
 				</div>
 			</div>
