--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				  <div class="panel-heading">Story 1</div>
 				<div class="panel-body">
 					<img src="pictures/puppy1.jpg">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					This is the puppy of the week! His name is White and he is living with a loving family of 4. The mom and dad have two children who are age 4 and age 6. These two children absolutely love playing with White because he is a very gentle and easy-going dog. The two kids love taking White for walks and taking him outside. The family is currently training him and the two kids love feeding him treats when he does something correct. White has just learned to sit, shake, and rollover within the first week of living with his family. That is why White is the puppy of the week!
 				  </div>
 				</div>
 			</div>
