--- a/gallery.html
+++ b/gallery.html
@@ -23,9 +23,10 @@
 		height:400px;
 	}
 
-	.nav-stacked{
+	.nav-pills{
 		background-color:white;
 		width: 20%;
+		
 	}
 	
 	</style>
@@ -66,13 +67,15 @@
 	
 		<h1 class="page-header">Gallery</h1>
 	
+				
+	
 		<div class="row">
 			<div class="col-md-3">
-				<ul class="nav nav-pills nav-stacked" data-spy="affix">
+			<ul class="nav nav-pills nav-stacked">
 				  <li role="presentation"><a href="#dogs">Dogs</a></li>
 				  <li role="presentation"><a href="#cats">Cats</a></li>
 				  <li role="presentation"><a href="#other">Other</a></li>
-				</ul>
+				</ul>	
 			</div>
 
 
