--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 		margin-bottom:20px;
 	}
 	
+	iframe{
+		max-width:600px;
+		max-height:;
+	
+	}
 	</style>
 
 </head>
@@ -70,8 +75,8 @@
 	</nav>
 
 	<div class="container">
-		<h1 class="page-header">Site Name</h1>
-		<h3>Adoption Agency Tagline</h3>
+		<h1 class="page-header">L'Adoption Center</h1>
+		<h3>Pet Adoption Agency</h3>
 	
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 		  <!-- Indicators -->
@@ -86,19 +91,19 @@
 			<div class="item active">
 			  <img src="pictures/puppy.jpg">
 			  <div class="carousel-caption">
-				Look at this puppy!!!!!
+				<a href="gallery.html"><button class="btn btn-primary">See more</button></a>
 			  </div>
 			</div>
 			<div class="item">
 			  <img src="pictures/lizard.jpg">
 			  <div class="carousel-caption">
-				Look at this little guy!!!
+				<a href="gallery.html"><button class="btn btn-primary">See more</button></a>			  
 			  </div>
 			</div>
 			<div class="item">
 			  <img src="pictures/bird.jpg">
 			  <div class="carousel-caption">
-				Bird bird bird!!!
+			  	<a href="gallery.html"><button class="btn btn-primary">See more</button></a>
 			  </div>
 			</div>
 		  </div>
@@ -144,6 +149,8 @@
 				</div>
 			</div>
 		</div>
+		
+		
 	</div>
 	
 	<footer>
