--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 			</div>
 			<div class="col-md-4">
 				<div class="panel panel-default">
-				  <div class="panel-heading">Story 3</div>
+				  <div class="panel-heading">Healthy Pets</div>
 				  <div class="panel-body">
 					<img src="pictures/vet.jpg">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					In order to keep your pets healthy make sure you are getting all of their shots after adoption and getting them the right food that they are used to eating. If your pet is not acting like normal make sure to take them immediately to the vet! Nothing is more terrible than seeing a sick pet. Having the correct cages, crates, kennels, cleaning supplies, collars and leashes because these are essential to keeping a healthy lifestyle for your pets. 
 				  </div>
 				</div>
 			</div>
