--- a/about.html
+++ b/about.html
@@ -12,6 +12,14 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/site.css" rel="stylesheet">
    
+   <style>
+   img{
+		height:400px;
+		margin-bottom: 15px;
+   }
+   
+   
+   </style>
 	
 </head>
 <body>
@@ -58,6 +66,7 @@
 			</div>
 			
 			<div class="col-md-4">
+				<img src="pictures/laura.jpg">
 				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseLaura" >Laura Paganini</button>
 				<div  class="collapse" id="collapseLaura">
 					<div class="well">
