--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@
 	
 		<div class="row">
 			<div class="col-md-3">
-			<ul class="nav nav-pills nav-stacked">
+			<ul class="nav nav-pills nav-stacked" data-spy="affix">
 				  <li role="presentation"><a href="#dogs">Dogs</a></li>
 				  <li role="presentation"><a href="#cats">Cats</a></li>
 				  <li role="presentation"><a href="#other">Other</a></li>
