--- a/about.html
+++ b/about.html
@@ -16,6 +16,11 @@
    img{
 		height:400px;
 		margin-bottom: 15px;
+		max-width:100%;
+   }
+   
+   .col-md-4{
+		margin:auto;
    }
    
    
@@ -57,6 +62,7 @@
 		<h1 class="page-header">Meet our team!</h1>
 		<div class="row">
 			<div class="col-md-4">
+				<img src="pictures/dillon.jpg">
 				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseDillon">Dillon Thomas</button>
 				<div  class="collapse" id="collapseDillon">
 					<div class="well">
