--- a/gallery.html
+++ b/gallery.html
@@ -88,15 +88,23 @@
 					<img class="img-responsive" src="pictures/dog4.jpg">
 					<div class="caption">
 						<h3>Joey</h3>
-						<p>...</p>
+						<p>Joey is a four year old chihuahua mix looking for a loving home. He's very energetic and gets along great with kids!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt him!</a> 
+					</div>
+				</div>
+                <div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
+					<img class="img-responsive" src="pictures/puppy.jpg">
+					<div class="caption">
+						<h3>Daisy</h3>
+						<p>Daisy is a yellow lab and was given to us after her owner recently passed away. She's very loyal and will make a great addition to your family.</p>
+						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
 					<img class="img-responsive" src="pictures/dog1.jpg">
 					<div class="caption">
 						<h3>Fido</h3>
-						<p>...</p>
+						<p>Fido is part of the mixed litter that was dropped off to us last week. He's the last one left and wants to go home with you!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt him!</a> 
 					</div>
 				</div>
@@ -104,7 +112,7 @@
 					<img class="img-responsive" src="pictures/dog3.jpg">
 					<div class="caption">
 						<h3>Snoopy</h3>
-						<p>...</p>
+						<p>Snoopy is an older beagle who loves to go on long walks on the beach. He'll be the perfect match for you!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt him!</a> 
 					</div>
 				</div>
@@ -112,7 +120,7 @@
 					<img class="img-responsive" src="pictures/dog2.jpg">
 					<div class="caption">
 						<h3>Lucky</h3>
-						<p>...</p>
+						<p>Lucky is a mutt that was found on the streets by one of our staff. He was taken in by us and after a flea bath and some cuddling, he's ready to get a new home!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt him!</a> 
 					</div>
 				</div>
@@ -149,9 +157,25 @@
 				<div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
 					<img class="img-responsive" src="pictures/rabbit.jpg">
 					<div class="caption">
-						<h3>Rodger</h3>
+						<h3>Roger</h3>
 						<p>...</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt him!</a> 
+					</div>
+				</div>
+                   <div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
+					<img class="img-responsive" src="pictures/lizard.jpg">
+					<div class="caption">
+						<h3>Lizzy</h3>
+						<p>...</p>
+						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
+					</div>
+				</div>
+                   <div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
+					<img class="img-responsive" src="pictures/bird.jpg">
+					<div class="caption">
+						<h3>Tweety</h3>
+						<p>...</p>
+						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
