--- a/about.html
+++ b/about.html
@@ -82,10 +82,11 @@
 			</div>
 
 			<div class="col-md-4">
+            <img src="pictures/anna.jpg">
 				<button class="btn btn-primary"  data-toggle="collapse" data-target="#collapseAnna" >Anna Bunting</button>
 				<div  class="collapse" id="collapseAnna">
 					<div class="well">
-					<p>Hello! I am a junior Interactive Media Studies Major, specializing in Interactive Business and minoring in Management. After gradution in December of 2016, I plan to work in the Event Planning industry doing a few of my favorite things: web design, social media, marketing, and graphic design. In my free time, you can find me pinning on Pinterest, playing with my dogs, or watching Whose Line Is It Anyway.</p>
+					<p>Anna is a junior Interactive Media Studies Major, specializing in Interactive Business and minoring in Management. In her free time, you can find her pinning on Pinterest, playing with her dogs, or watching "Whose Line Is It Anyway?".</p>
 					</div>
 				</div>
 			</div>
