--- a/gallery.html
+++ b/gallery.html
@@ -83,8 +83,7 @@
 			
 			<div class="row">
 				<a name="dogs"></a>
-			
-				<div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
+			 <div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
 					<img class="img-responsive" src="pictures/dog4.jpg">
 					<div class="caption">
 						<h3>Joey</h3>
@@ -131,7 +130,7 @@
 					<img class="img-responsive" src="pictures/cat2.jpg">
 					<div class="caption">
 						<h3>Misty</h3>
-						<p>...</p>
+						<p>Misty loves taking cat naps in our window and makes new friends easily. If you love cat naps, this is the cat for you!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
@@ -139,7 +138,7 @@
 					<img class="img-responsive" src="pictures/cat3.jpg">
 					<div class="caption">
 						<h3>Freckles</h3>
-						<p>...</p>
+						<p>Freckles just recently had kittens and is ready to find a home of her own! She loves catnip and feathers!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
@@ -147,7 +146,7 @@
 					<img class="img-responsive" src="pictures/cat1.jpg">
 					<div class="caption">
 						<h3>Alexa</h3>
-						<p>...</p>
+						<p>Alexa is a one year old kitten with beautiful markings. She's the sweetest cat ever and will make your day, every day!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
@@ -158,7 +157,7 @@
 					<img class="img-responsive" src="pictures/rabbit.jpg">
 					<div class="caption">
 						<h3>Roger</h3>
-						<p>...</p>
+						<p>Roger is a dwarf rabbit that likes to spend time on his own in his hutch. When he's ready to play though, he'll play for hours!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt him!</a> 
 					</div>
 				</div>
@@ -166,15 +165,15 @@
 					<img class="img-responsive" src="pictures/lizard.jpg">
 					<div class="caption">
 						<h3>Lizzy</h3>
-						<p>...</p>
+						<p>Lizzy is a beautifully colored lizard that could chill on your shoulder all day. She can't wait to meet you!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
                    <div class="col-lg-3 col-md-4 col-xs-6 thumbnail">
 					<img class="img-responsive" src="pictures/bird.jpg">
 					<div class="caption">
-						<h3>Tweety</h3>
-						<p>...</p>
+						<h3>Polly</h3>
+						<p>Polly is a parrot that just loves crackers. She knows a couple of tricks and would love to show you them!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
@@ -182,7 +181,7 @@
 					<img class="img-responsive" src="pictures/chinchilla.jpg">
 					<div class="caption">
 						<h3>Fluffy</h3>
-						<p>...</p>
+						<p>Fluffy is a chinchilla that just wants to be your friend. She makes a great first pet and gets along great with kids!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt her!</a> 
 					</div>
 				</div>
@@ -190,7 +189,7 @@
 					<img class="img-responsive" src="pictures/hedgehog.jpg">
 					<div class="caption">
 						<h3>Obi</h3>
-						<p>...</p>
+						<p>Obi the hedgehog is a character! He's always running around in his cage and playing with his toys. He's ready to play with you!</p>
 						<a href="contact.html" class="btn btn-primary" role="button">Adopt him!</a> 
 					</div>
 				</div>
