--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/site.css" rel="stylesheet">
 	
+	<!-- page css-->
 	<style>
 		#form-container{
 			width:30%;
@@ -25,17 +26,9 @@
 		
 	</style>
 	
-	
-	
-
 </head>
 <body>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-	
-	
+	<!-- nav bar -->
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -46,7 +39,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#">Brand</a>
+		  <a class="navbar-brand" href="index.html">Brand</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,7 +61,7 @@
 		<h1>Want to give an animal a forever home?</h1>
 		<h3>Enter your information here to begin your application.</h3>
 		
-		
+		<!-- form -->
 		<div id="row">
 			<div id = "form-container" class="col-md-8">
 			<form>
@@ -111,8 +104,9 @@
 		<p>Anna Bunting</p>
 		<p>Dillon Thomas</p>
 	</footer>
+
 	
-	
+	<!-- form validation -->
 	<script>
 	$("input").on("focusout", function(){
 		var regex;
@@ -135,5 +129,9 @@
 	</script>
 
 
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 <HTML>
