--- a/gallery.html
+++ b/gallery.html
@@ -11,12 +11,8 @@
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/site.css" rel="stylesheet">
-	
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
 
+	<!-- page css -->
 	<style>
 	.thumbnail{
 		margin:2%;
@@ -25,18 +21,13 @@
 
 	.nav-pills{
 		background-color:white;
-		width: 20%;
-		
+		width: 20%;	
 	}
-	
 	</style>
-	
 	
 </head>
 <body>
-	
-
-
+	<!-- nav bar -->
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -47,7 +38,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#">Brand</a>
+		  <a class="navbar-brand" href="index.html">Brand</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -67,8 +58,7 @@
 	
 		<h1 class="page-header">Gallery</h1>
 	
-				
-	
+		<!-- side nav bar -->
 		<div class="row">
 			<div class="col-md-3">
 			<ul class="nav nav-pills nav-stacked" data-spy="affix">
@@ -78,7 +68,7 @@
 				</ul>	
 			</div>
 
-
+		<!-- animals -->
 		<div class="col-md-9">
 			
 			<div class="row">
@@ -201,17 +191,9 @@
 		<p>Dillon Thomas</p>
 	</footer>
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-
-
-
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
