--- a/history.html
+++ b/history.html
@@ -12,17 +12,16 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/site.css" rel="stylesheet">
 
+	<!-- page css -->
 	<style>
 	iframe{
 		height:100px;
 	}
-	
-	
-	
 	</style>
 	
 </head>
 <body>
+	<!-- nav bar -->
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -53,17 +52,17 @@
 		<h1 class="page-header">Our History</h1>
 		
 		<div class="row">
-		<div class="col-md-6">
-		<div class="embed-responsive embed-responsive-16by9 video">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/5rdVXjW8N2o" frameborder="0" allowfullscreen></iframe>
-		</div>
-		<p>This video is of our very first litter of kittens that were given to us as an agency.</p>
-		</div>
-		
-		<div class="col-md-6">
-		<p>For 150 years, the American Society for the Prevention of Cruelty to Animals® (ASPCA) has worked tirelessly to put an end to animal abuse and neglect. We are a national leader in the areas of rescue, adoption and welfare, but none of it would be possible without ASPCA Guardians. Guardians' regular monthly gifts provide a consistent, reliable income stream that allows us to spend less time fundraising—and more time saving lives. Becoming an ASPCA Guardian is an easy, efficient and tax-deductible way to fight cruelty and make a difference for animals all year long.</p>
-		<p>This is not our actual history; this is the history of ASPCA.</p>
-		</div>
+			<div class="col-md-6">
+				<div class="embed-responsive embed-responsive-16by9 video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/5rdVXjW8N2o" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<p>This video is of our very first litter of kittens that were given to us as an agency.</p>
+			</div>
+			
+			<div class="col-md-6">
+				<p>For 150 years, the American Society for the Prevention of Cruelty to Animals® (ASPCA) has worked tirelessly to put an end to animal abuse and neglect. We are a national leader in the areas of rescue, adoption and welfare, but none of it would be possible without ASPCA Guardians. Guardians' regular monthly gifts provide a consistent, reliable income stream that allows us to spend less time fundraising—and more time saving lives. Becoming an ASPCA Guardian is an easy, efficient and tax-deductible way to fight cruelty and make a difference for animals all year long.</p>
+				<p>This is not our actual history; this is the history of ASPCA.</p>
+			</div>
 		</div>
 	
 	</div>
@@ -80,7 +79,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-
-
 </body>
 </html>
