--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/site.css" rel="stylesheet">
 	
-	
+	<!-- page css -->
 	<style>
 	#carousel-example-generic img, #carousel-example-generic{
 		width: 700px;
@@ -41,13 +41,7 @@
 
 </head>
 <body>
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-	
-	
+	<!-- nav bar -->
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -58,7 +52,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#">Brand</a>
+		  <a class="navbar-brand" href="index.html">Brand</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,6 +72,7 @@
 		<h1 class="page-header">L'Adoption Center</h1>
 		<h3>Pet Adoption Agency</h3>
 	
+		<!-- carosel -->
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 		  <!-- Indicators -->
 		  <ol class="carousel-indicators">
@@ -120,6 +115,7 @@
 		</div>
 		
 		
+		<!-- articles -->
 		<div class="row">
 			<div class="col-md-4">
 				<div class="panel panel-default">
@@ -150,7 +146,6 @@
 			</div>
 		</div>
 		
-		
 	</div>
 	
 	<footer>
@@ -160,9 +155,9 @@
 		<p>Dillon Thomas</p>
 	</footer>
 	
-	
-	
-
-
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 <HTML>
