--- a/history.html
+++ b/history.html
@@ -32,7 +32,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#">Brand</a>
+		  <a href="index.html"><img class="logo"src="pictures/ladoption.png"></a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,10 +68,9 @@
 	</div>
 	
 	<footer>
-		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
-		<p>Laura Paganini</p>
-		<p>Anna Bunting</p>
-		<p>Dillon Thomas</p>
+		<p>L'Adoption Agency &copy; 2016</p>
+		<p>Laura Paganini, Anna Bunting, and Dillon Thomas</p>
+		<p>IMS 257 Final Project</p>
 	</footer>
 	
 	
