--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		text-align: center;
 	}
 	
-	img{
+	.container img{
 		width: 100%;
 		margin-bottom:20px;
 	}
@@ -52,7 +52,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="index.html">Brand</a>
+		  <a href="index.html"><img class="logo"src="pictures/ladoption.png"></a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -149,10 +149,9 @@
 	</div>
 	
 	<footer>
-		<p>Site Name &copy; 2016 IMS 257 Final Project</p>
-		<p>Laura Paganini</p>
-		<p>Anna Bunting</p>
-		<p>Dillon Thomas</p>
+		<p>L'Adoption Agency &copy; 2016</p>
+		<p>Laura Paganini, Anna Bunting, and Dillon Thomas</p>
+		<p>IMS 257 Final Project</p>
 	</footer>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
